tdf#120262 sw floattable: don't wrap text around fly when no content would fit

The document has 2 pages with 2 floating tables, but instead Writer had
a single page with 2 overlapping floating tables.

What happened is that most of the horizontal space on page 1 was used by
the floating table, but out of the 10466 twips body width, 11 remained
(after accounting for the floating table and its margin. Considering
that the empty paragraph needs no space, the paragraph marker was
shifted up, next to the floating table, leading to losing page 2 and
overlapping floating tables.

Fix the problem by checking if the remaining space has some minimal
size: if it has no space to host any actual content, then shift the
paragraph marker down (in compat mode), similar to what Word >= 2013
does.

Note this only fixes the "DOCX, Word >= 2013" version, the original
bug DOC file still needs more work.

Change-Id: I00864d9b3ae662cdf19fa63e004da1ee1cc7be7c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154409
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins