sw/CppunitTest_sw_core_text.mk
@@ -16,6 +16,7 @@ $(eval $(call gb_CppunitTest_use_common_precompiled_header,sw_core_text))
 $(eval $(call gb_CppunitTest_add_exception_objects,sw_core_text, \
     sw/qa/core/text/frmform \
     sw/qa/core/text/itratr \
+    sw/qa/core/text/itrform2 \
     sw/qa/core/text/text \
 ))
 
